[gd_scene load_steps=16 format=3 uid="uid://b1gqmb87i7b32"]

[ext_resource type="Script" path="res://main.gd" id="1_pw337"]
[ext_resource type="AudioStream" uid="uid://r4qwtrkneoho" path="res://button_click.mp3" id="2_0h78k"]
[ext_resource type="Texture2D" uid="uid://cfqlh1qmr7e7g" path="res://palms.png" id="2_hctgo"]
[ext_resource type="FontFile" uid="uid://cnylo36vb7j7y" path="res://Jersey25-Regular.ttf" id="2_r46jj"]
[ext_resource type="PackedScene" uid="uid://bjwsr7tb41e0t" path="res://shop.tscn" id="2_rorad"]
[ext_resource type="AudioStream" uid="uid://dcbjd4xbt722d" path="res://gambling.mp3" id="7_t6tqp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8m3qh"]
bg_color = Color(0.658824, 0.482353, 0.321569, 1)
border_width_left = 30
border_width_top = 30
border_width_right = 30
border_width_bottom = 30
border_color = Color(0.380392, 0.305882, 0.254902, 1)
border_blend = true
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eyufb"]
bg_color = Color(0.811765, 0.533333, 0.65098, 1)
border_width_bottom = 1024
border_color = Color(0.952941, 0.678431, 0.439216, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ongpo"]
bg_color = Color(1, 0.25098, 0, 1)
border_width_left = 8
border_width_right = 8
border_width_bottom = 40
border_color = Color(0.329412, 0.0588235, 0, 1)
border_blend = true
corner_radius_top_left = 35
corner_radius_top_right = 35
corner_radius_bottom_right = 35
corner_radius_bottom_left = 35
corner_detail = 20
shadow_color = Color(0.329412, 0.0588235, 0, 0.235294)
shadow_size = 10
shadow_offset = Vector2(0, 7)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f47bw"]
bg_color = Color(1, 0.25098, 0, 1)
border_width_left = 8
border_width_right = 8
border_width_bottom = 20
border_color = Color(0.329412, 0.0588235, 0, 1)
border_blend = true
corner_radius_top_left = 35
corner_radius_top_right = 35
corner_radius_bottom_right = 35
corner_radius_bottom_left = 35
corner_detail = 20
shadow_color = Color(0.329412, 0.0588235, 0, 0.235294)
shadow_size = 5
shadow_offset = Vector2(0, 7)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6hmt7"]
bg_color = Color(1, 0.25098, 0, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.329412, 0.0588235, 0, 1)
border_blend = true
corner_radius_top_left = 35
corner_radius_top_right = 35
corner_radius_bottom_right = 35
corner_radius_bottom_left = 35
corner_detail = 20

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gji57"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pxd8x"]
bg_color = Color(0.427451, 0.658824, 0, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(1, 0.7, 0.875, 1)
corner_detail = 20
shadow_size = 2
shadow_offset = Vector2(0, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tlwsg"]
bg_color = Color(1, 0.211765, 0.670588, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_23quy"]

[node name="main" type="Node"]
script = ExtResource("1_pw337")

[node name="TASK BOARD" type="Label" parent="."]
offset_left = 728.0
offset_top = 18.0
offset_right = 984.0
offset_bottom = 297.0
theme_override_colors/font_color = Color(0.6, 1, 0.972549, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_8m3qh")
text = "TASKS:
-JUICE(particles ig)
-multiple resolutions?

-shader black magic
-ANDROID????? "

[node name="background" type="Panel" parent="."]
show_behind_parent = true
z_index = -6
offset_right = 448.0
offset_bottom = 720.0
theme_override_styles/panel = SubResource("StyleBoxFlat_eyufb")

[node name="Palms" type="Sprite2D" parent="background"]
modulate = Color(1, 0.301961, 1, 0.0745098)
position = Vector2(312, 568)
scale = Vector2(1.10751, 1.10751)
texture = ExtResource("2_hctgo")

[node name="THE_BUTTON" type="Button" parent="."]
offset_left = 64.0
offset_top = 384.0
offset_right = 256.0
offset_bottom = 576.0
theme_override_colors/font_color = Color(0.329412, 0.0588235, 0, 1)
theme_override_colors/font_pressed_color = Color(0.329412, 0.0588235, 0, 1)
theme_override_colors/font_hover_color = Color(0.329412, 0.0588235, 0, 1)
theme_override_colors/font_focus_color = Color(0.329412, 0.0588235, 0, 1)
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_ongpo")
theme_override_styles/hover = SubResource("StyleBoxFlat_f47bw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6hmt7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_gji57")
button_mask = 3
text = "CLICK"

[node name="ButtonClick" type="AudioStreamPlayer" parent="THE_BUTTON"]
stream = ExtResource("2_0h78k")
pitch_scale = 1.14

[node name="THE_NUMBER" type="Label" parent="."]
offset_left = 24.0
offset_top = 192.0
offset_right = 296.0
offset_bottom = 277.0
theme_override_fonts/font = ExtResource("2_r46jj")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_pxd8x")
text = "25"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ClickMultiplierDisplay" type="Label" parent="."]
offset_left = 24.0
offset_top = 88.0
offset_right = 296.0
offset_bottom = 184.0
theme_override_fonts/font = ExtResource("2_r46jj")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_pxd8x")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Shop" parent="." instance=ExtResource("2_rorad")]
offset_left = 320.0
offset_top = 88.0
offset_right = 320.0
offset_bottom = 88.0

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="DeleteSaveButton" type="Button" parent="."]
offset_right = 136.0
offset_bottom = 40.0
theme_override_colors/font_pressed_color = Color(1, 0.94902, 0, 1)
theme_override_fonts/font = ExtResource("2_r46jj")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_tlwsg")
theme_override_styles/hover = SubResource("StyleBoxFlat_tlwsg")
theme_override_styles/pressed = SubResource("StyleBoxFlat_tlwsg")
theme_override_styles/focus = SubResource("StyleBoxEmpty_23quy")
text = "DELETE SAVE"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_t6tqp")
volume_db = -11.243
autoplay = true

[node name="VolumeSlider" type="HSlider" parent="."]
offset_left = 392.0
offset_top = 32.0
offset_right = 600.0
offset_bottom = 48.0
rotation = 3.14159

[connection signal="pressed" from="THE_BUTTON" to="." method="_on_button_pressed"]
[connection signal="save" from="Shop" to="." method="_on_shop_save"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="DeleteSaveButton" to="." method="_on_delete_save_button_pressed"]
